Added buttons for hide and reveal

--- a/html/ancient.html
+++ b/html/ancient.html
@@ -38,12 +38,18 @@
     </header>
     <main>
       <h1 id="Ancient_Kansekiri">旧神關里</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <!-- The Former Capital, Then & Now -->
       <article>
         <h2 id="The_Former_Capital_Then_and_Now">古い都の町人、古代と現代</h2>
+        <button type="button" onclick="">町人を隠す</button>
+        <button type="button" onclick="">町人を現す</button>
         <!-- 柏嵜法牌香（Kashizaki no Hakaru no Fudakau） -->
         <section>
           <h4 id="Kashizaki_no_Hakaru_no_Fudakau">柏嵜法牌香</h4>
+          <button type="button" onclick="">牌香を隠す</button>
+          <button type="button" onclick="">牌香を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -82,6 +88,8 @@
         <!-- 遠呂智蛇揺雨（Orochi no Hebi no Yurusame） -->
         <section>
           <h4 id="Orochi_no_Hebi_no_Yurusame">遠呂智蛇揺雨</h4>
+          <button type="button" onclick="">揺雨を隠す</button>
+          <button type="button" onclick="">揺雨を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -121,6 +129,8 @@
         <!-- 平也醒上丸（Taira no Yasame no Kamimaru） -->
         <section>
           <h4 id="Taira_no_Yasame_no_Kamimaru">平也醒上丸</h4>
+          <button type="button" onclick="">上丸を隠す</button>
+          <button type="button" onclick="">上丸を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -163,6 +173,8 @@
         <!-- 夜叉町鐵奈我沙（Yashamachi no Kurogane no Nagasa） -->
         <section>
           <h4 id="Yashamachi_no_Kurogane_no_Nagasa">夜叉町鐵奈我沙</h4>
+          <button type="button" onclick="">奈我沙を隠す</button>
+          <button type="button" onclick="">奈我沙を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -200,9 +212,13 @@
       <!-- 神關里の元帝王（Former Emperors of Kansekiri） -->
       <article>
         <h2 id="Former_Emperors_of_Kansekiri">神關里の元帝王</h2>
+        <button type="button" onclick="">元帝王を隠す</button>
+        <button type="button" onclick="">元帝王を現す</button>
         <!-- 一条久二乃良宗（Ichijo no Kuni no Noramune） -->
         <section>
           <h4 id="Ichijo_no_Kuni_no_Noramune">一条久二乃良宗</h4>
+          <button type="button" onclick="">乃良宗を隠す</button>
+          <button type="button" onclick="">乃良宗を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -241,6 +257,8 @@
         <!-- 二条清八太郎（Nijo no Kiyo no Yataro） -->
         <section>
           <h4 id="Nijo_no_Kiyo_no_Yataro">二条清八太郎</h4>
+          <button type="button" onclick="">八太郎を隠す</button>
+          <button type="button" onclick="">八太郎を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -279,6 +297,8 @@
         <!-- 三條麹丸雨（Sanjo no Kouji no Marusame） -->
         <section>
           <h4 id="Sanjo_no_Kouji_no_Marusame">三條麹丸雨</h4>
+          <button type="button" onclick="">丸雨を隠す</button>
+          <button type="button" onclick="">丸雨を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -317,6 +337,8 @@
         <!-- 源蜘彩歌子（Minamoto no Kumo no Ayakashi） -->
         <section>
           <h4 id="Minamoto_no_Kumo_no_Ayakashi">源蜘彩歌子</h4>
+          <button type="button" onclick="">彩歌子を隠す</button>
+          <button type="button" onclick="">彩歌子を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -355,6 +377,8 @@
         <!-- 平榊間美智（Taira no Sakama no Yoshitomo） -->
         <section>
           <h4 id="Taira_no_Sakama_no_Yoshitomo">平榊間美智</h4>
+          <button type="button" onclick="">美智を隠す</button>
+          <button type="button" onclick="">美智を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -393,6 +417,8 @@
         <!-- 藤原裁峰義（Fujiwara no Sai no Mineyoshi） -->
         <section>
           <h4 id="Fujiwara_no_Sai_no_Mineyoshi">藤原裁峰義</h4>
+          <button type="button" onclick="">峰義を隠す</button>
+          <button type="button" onclick="">峰義を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -431,6 +457,8 @@
         <!-- 橘藪根岸仁（Tachibana no Yabune no Kishihito） -->
         <section>
           <h4 id="Tachibana_no_Yabune_no_Kishihito">橘藪根岸仁</h4>
+          <button type="button" onclick="">岸仁を隠す</button>
+          <button type="button" onclick="">岸仁を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -469,6 +497,8 @@
         <!-- 物部鑓殺奈（Mononobe no Yari no Setsuna） -->
         <section>
           <h4 id="Mononobe_no_Yari_no_Setsuna">物部鑓殺奈</h4>
+          <button type="button" onclick="">殺奈を隠す</button>
+          <button type="button" onclick="">殺奈を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -507,6 +537,8 @@
         <!-- 九条纖本盛（Kujo no Shina no Motomori） -->
         <section>
           <h4 id="Kujo_no_Shina_no_Motomori">九条纖本盛</h4>
+          <button type="button" onclick="">本盛を隠す</button>
+          <button type="button" onclick="">本盛を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -545,6 +577,8 @@
         <!-- 蘇我牀遣仁（Soga no Yuka no Yaruhito） -->
         <section>
           <h4 id="Soga_no_Yuka_no_Yaruhito">蘇我牀遣仁</h4>
+          <button type="button" onclick="">遣仁を隠す</button>
+          <button type="button" onclick="">遣仁を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -583,6 +617,8 @@
         <!-- 足利畔蒜毬二（Ashikaga no Kurone no Mariji） -->
         <section>
           <h4 id="Ashikaga_no_Kurone_no_Mariji">足利畔蒜毬二</h4>
+          <button type="button" onclick="">毬二を隠す</button>
+          <button type="button" onclick="">毬二を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -621,6 +657,8 @@
         <!-- 鷹司闇光之郞（Takatsukasa no Yami no Mitsunoro） -->
         <section>
           <h4 id="Takatsukasa_no_Yami_no_Mitsunoro">鷹司闇光之郞</h4>
+          <button type="button" onclick="">光之郞を隠す</button>
+          <button type="button" onclick="">光之郞を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -659,6 +697,8 @@
         <!-- 德川衣世探重（Tokugawa no Iyo no Sagashishige） -->
         <section>
           <h4 id="Tokugawa_no_Iyo_no_Sagashishige">德川衣世探重</h4>
+          <button type="button" onclick="">探重を隠す</button>
+          <button type="button" onclick="">探重を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -697,6 +737,8 @@
         <!-- 大炊御門鈴鵜麻（Oinomikado no Suzu no Uma） -->
         <section>
           <h4 id="Oinomikado_no_Suzu_no_Uma">大炊御門鈴鵜麻</h4>
+          <button type="button" onclick="">鵜麻を隠す</button>
+          <button type="button" onclick="">鵜麻を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -735,6 +777,8 @@
         <!-- 西園寺綯清宗（Saionji no Nau no Kiyomune） -->
         <section>
           <h4 id="Saionji_no_Nau_no_Kiyomune">西園寺綯清宗</h4>
+          <button type="button" onclick="">清宗を隠す</button>
+          <button type="button" onclick="">清宗を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -773,6 +817,8 @@
         <!-- 醍醐猿概（Daigo no Saru no Omune） -->
         <section>
           <h4 id="Daigo_no_Saru_no_Omune">醍醐猿概</h4>
+          <button type="button" onclick="">概を隠す</button>
+          <button type="button" onclick="">概を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -811,6 +857,8 @@
         <!-- 今出川裙兔雪丸（Imadegawa no Gunto no Setsumaru） -->
         <section>
           <h4 id="Imadagawa_no_Gunto_no_Setsumaru">今出川裙兔雪丸</h4>
+          <button type="button" onclick="">雪丸を隠す</button>
+          <button type="button" onclick="">雪丸を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -849,6 +897,8 @@
         <!-- 德大寺誇宗沙（Tokudaiji no Hokoru no Munesa） -->
         <section>
           <h4 id="Tokudaiji_no_Hokoru_no_Munesa">德大寺誇宗沙</h4>
+          <button type="button" onclick="">宗沙を隠す</button>
+          <button type="button" onclick="">宗沙を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -887,6 +937,8 @@
         <!-- 近衛鞠染鮫（Konoe no Mari no Somezame） -->
         <section>
           <h4 id="Konoe_no_Mari_no_Somezame">近衛鞠染鮫</h4>
+          <button type="button" onclick="">染鮫を隠す</button>
+          <button type="button" onclick="">染鮫を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -925,6 +977,8 @@
         <!-- 菊亭馬海春盛（Kikutei no Umakai no Harumori） -->
         <section>
           <h4 id="Kikutei_no_Umakai_no_Harumori">菊亭馬海春盛</h4>
+          <button type="button" onclick="">春盛を隠す</button>
+          <button type="button" onclick="">春盛を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -963,6 +1017,8 @@
         <!-- 花山院墨染花清（Kasannoin no Sumizome no Hananokiyo） -->
         <section>
           <h4 id="Kasannoin_no_Sumizome_no_Hananokiyo">花山院墨染花清</h4>
+          <button type="button" onclick="">花清を隠す</button>
+          <button type="button" onclick="">花清を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1001,6 +1057,8 @@
         <!-- 遊坂茜志奴呂（Yuuzaka no Akane no Shinuro） -->
         <section>
           <h4 id="Yuuzaka_no_Akane_no_Shinuro">遊坂茜志奴呂</h4>
+          <button type="button" onclick="">志奴呂を隠す</button>
+          <button type="button" onclick="">志奴呂を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
