--- a/html/boss.html
+++ b/html/boss.html
@@ -38,11 +38,17 @@
     </header>
     <main>
       <h1 id="Boss_Compendium">ボスの書</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <article>
         <h2 id="Chapter_One">第一章　異常</h2>
+        <button type="button" onclick="">第一章を隠す</button>
+        <button type="button" onclick="">第一章を現す</button>
         <!-- 崎鳥サーンプリヤ（Sakidori Sampriya） -->
         <section>
           <h4 id="Sakidori_Sampriya">崎鳥サーンプリヤ</h4>
+          <button type="button" onclick="">サーンプリヤを隠す</button>
+          <button type="button" onclick="">サーンプリヤを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -119,6 +125,8 @@
         <!-- テオニムフィ・アポストロプールー（Theonymphi Apostolopoulou） -->
         <section>
           <h4 id="Theonymphi_Apostolopoulou">テオニムフィ・アポストロプールー</h4>
+          <button type="button" onclick="">テオニムフィを隠す</button>
+          <button type="button" onclick="">テオニムフィを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -188,36 +196,58 @@
       </article>
       <article>
         <h2 id="Chapter_Two">第二章　侵攻</h2>
+        <button type="button" onclick="">第二章を隠す</button>
+        <button type="button" onclick="">第二章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Three">第三章　補給</h2>
+        <button type="button" onclick="">第三章を隠す</button>
+        <button type="button" onclick="">第三章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Four">第四章　砂漠</h2>
+        <button type="button" onclick="">第四章を隠す</button>
+        <button type="button" onclick="">第四章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Five">第五章　山々</h2>
+        <button type="button" onclick="">第五章を隠す</button>
+        <button type="button" onclick="">第五章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Six">第六章　過去</h2>
+        <button type="button" onclick="">第六章を隠す</button>
+        <button type="button" onclick="">第六章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Seven">第七章　天界</h2>
+        <button type="button" onclick="">第七章を隠す</button>
+        <button type="button" onclick="">第七章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Eight">第八章　流竄</h2>
+        <button type="button" onclick="">第八章を隠す</button>
+        <button type="button" onclick="">第八章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Nine">第九章　智慧</h2>
+        <button type="button" onclick="">第九章を隠す</button>
+        <button type="button" onclick="">第九章を現す</button>
       </article>
       <article>
         <h2 id="Chapter_Ten">第十章　解脱</h2>
+        <button type="button" onclick="">第十章を隠す</button>
+        <button type="button" onclick="">第十章を現す</button>
       </article>
       <article>
         <h2 id="Final_Chapter">最終章　輪廻</h2>
+        <button type="button" onclick="">最終章を隠す</button>
+        <button type="button" onclick="">最終章を現す</button>
       </article>
       <article>
         <h2 id="EX_Chapter">ＥＸ章　再会</h2>
+        <button type="button" onclick="">ＥＸ章を隠す</button>
+        <button type="button" onclick="">ＥＸ章を現す</button>
       </article>
     </main>
     <footer>
