--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -39,9 +39,13 @@
     <main>
       <article>
         <h1 id="Palace_of_the_Despised">侮之殿</h1><hr>
+        <button type="button" onclick="">全てを隠す</button>
+        <button type="button" onclick="">全てを現す</button>
         <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
         <section>
           <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
+          <button type="button" onclick="">アリギルトスを隠す</button>
+          <button type="button" onclick="">アリギルトスを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -80,6 +84,8 @@
         <!-- アルクスネ・キェルスタ（Ķersta Alksne） -->
         <section>
           <h4 id="Ķersta_Alksne">アルクスネ・キェルスタ</h4>
+          <button type="button" onclick="">キェルスタを隠す</button>
+          <button type="button" onclick="">キェルスタを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -118,6 +124,8 @@
         <!-- アルクスネ・クリメンティーナ（Klimentīna Alksne） -->
         <section>
           <h4 id="Klimentīna_Alksne">アルクスネ・クリメンティーナ</h4>
+          <button type="button" onclick="">クリメンティーナを隠す</button>
+          <button type="button" onclick="">クリメンティーナを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -156,6 +164,8 @@
         <!-- アルクスネ・リーリヤ（Līrija Alksne） -->
         <section>
           <h4 id="Līrija_Alksne">アルクスネ・リーリヤ</h4>
+          <button type="button" onclick="">リーリヤを隠す</button>
+          <button type="button" onclick="">リーリヤを現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
