--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -38,9 +38,13 @@
     </header>
     <main>
       <h1 id="Hikigahara_Forest">日木ヶ原の森</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <!-- 朴茶々丸（Chachamaru Paku） -->
       <section>
         <h4 id="Chachamaru_Paku">朴茶々丸</h4>
+        <button type="button" onclick="">茶々丸を隠す</button>
+        <button type="button" onclick="">茶々丸を現す</button>
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
