--- a/html/hutagozima.html
+++ b/html/hutagozima.html
@@ -36,9 +36,13 @@
     </header>
     <main>
       <h1 id="United_Republic_of_the_Twin_Islands">二子島連合共和国</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <!-- ディドフッフシ・チャギシー市（Dhidhhuffushi-Chaghisi City）-->
       <article>
         <h2 id="Dhidhhuffushi-Chaghisi_City">ディドフッフシ・チャギシー市</h2>
+        <button type="button" onclick="">ディドフッフシ・チャギシーを隠す</button>
+        <button type="button" onclick="">ディドフッフシ・チャギシーを現す</button>
         <!-- （） -->
         <section>
           <h4 id=""></h4>
@@ -48,9 +52,13 @@
       <!-- 天の島（Island of Ame） -->
       <div id="天の島">
         <h2 id="Island_of_Ame">天の島</h2>
+        <button type="button" onclick="">天の島を隠す</button>
+        <button type="button" onclick="">天の島を現す</button>
         <!-- ティンダフナドゥー市（Thindafunadhoo City｜ތިންޑަފުނަދޫ｜Thindafunadhoo） -->
         <article>
           <h3 id="Thindafunadhoo_City">ティンダフナドゥー市</h3>
+          <button type="button" onclick="">ティンダフナドゥーを隠す</button>
+          <button type="button" onclick="">ティンダフナドゥーを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
@@ -60,6 +68,8 @@
         <!-- クルドゥフヴァル市（Kulhudhufvaru City｜ކުޅުދުފްވަރު｜Kulhudhufvaru） -->
         <article>
           <h3 id="Kulhudhufvaru_City">クルドゥフヴァル市</h3>
+          <button type="button" onclick="">クルドゥフヴァルを隠す</button>
+          <button type="button" onclick="">クルドゥフヴァルを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
@@ -69,6 +79,8 @@
         <!-- ヴィリンミードゥー市（Villinmeedhoo City｜ވިލްލިންމީދޫ｜Villinmeedhoo） -->
         <article>
           <h3 id="Villinmeedhoo_City">ヴィリンミードゥー市</h3>
+          <button type="button" onclick="">ヴィリンミードゥーを隠す</button>
+          <button type="button" onclick="">ヴィリンミードゥーを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
@@ -79,9 +91,13 @@
       <!-- 魔の島（Island of Ma） -->
       <div id="魔の島">
         <h2 id="Island_of_Ma">魔の島</h2>
+        <button type="button" onclick="">魔の島を隠す</button>
+        <button type="button" onclick="">魔の島を現す</button>
         <!-- ラタムガラー市（Latamgara City｜لتمگرا｜Latamgarā） -->
         <article>
           <h3 id="Latamgara_City">ラタムガラー市</h3>
+          <button type="button" onclick="">ラタムガラーを隠す</button>
+          <button type="button" onclick="">ラタムガラーを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
@@ -91,6 +107,8 @@
         <!-- パッシャブ市（Passhab City｜پسشب｜Passhab） -->
         <article>
           <h3 id="Passhab_City">パッシャブ市</h3>
+          <button type="button" onclick="">パッシャブを隠す</button>
+          <button type="button" onclick="">パッシャブを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
@@ -100,6 +118,8 @@
         <!-- カンダラタバド市（Qandalatabad City｜قندلتبد｜Qandalatabad） -->
         <article>
           <h3 id="Qandalatabad_City">カンダラタバド市</h3>
+          <button type="button" onclick="">カンダラタバドを隠す</button>
+          <button type="button" onclick="">カンダラタバドを現す</button>
           <!-- （） -->
           <section>
             <h4 id=""></h4>
