--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -38,12 +38,18 @@
     </header>
     <main>
       <h1 id="Bīngyán_Kingdom">冰岩王國</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <!-- 渮禳村（Héráng Village｜菏禳村[菏禳村]｜Héráng Cūn） -->
       <article>
         <h2 id="Héráng_Village"><ruby>渮<rt class="head-furigana">か</rt>禳<rt class="head-furigana">じょう</rt></ruby>村</h2>
+        <button type="button" onclick="">渮禳を隠す</button>
+        <button type="button" onclick="">渮禳を現す</button>
         <!-- 艾鬼影（Ài Guǐyǐng） -->
         <section>
           <h4 id="Ài_Guǐyǐng">艾鬼影</h4>
+          <button type="button" onclick="">鬼影を隠す</button>
+          <button type="button" onclick="">鬼影を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -81,6 +87,8 @@
         <!-- 李藍紀（Lǐ Lánjǐ） -->
         <section class="section">
           <h4 id="Lǐ_Lánjǐ">李藍紀</h4>
+          <button type="button" onclick="">藍紀を隠す</button>
+          <button type="button" onclick="">藍紀を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -118,6 +126,8 @@
         <!-- 梁丘城（Liángqiū Chéng） -->
         <section>
           <h4 id="Liángqiū_Chéng">梁丘城</h4>
+          <button type="button" onclick="">城を隠す</button>
+          <button type="button" onclick="">城を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -171,6 +181,8 @@
         <!-- 梅樹人（Méi Shùrén） -->
         <section>
           <h4 id="Méi_Shùrén">梅樹人</h4>
+          <button type="button" onclick="">樹人を隠す</button>
+          <button type="button" onclick="">樹人を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -209,9 +221,13 @@
       <!-- 元氣哈爾町（Yuánqìhā'ěr Town｜元氣哈爾鎮[元气哈尔镇]｜Yuánqìhā'ěr Zhèn） -->
       <article>
         <h2 id="Yuánqìhā'ěr_Town"><ruby>元<rt class="head-furigana">げん</rt>氣<rt class="head-furigana">き</rt>哈<rt class="head-furigana">か</rt>爾<rt class="head-furigana">じ</rt></ruby>町</h2>
+        <button type="button" onclick="">元氣哈爾を隠す</button>
+        <button type="button" onclick="">元氣哈爾を現す</button>
         <!-- 混沌（Hùndùn） -->
         <section>
           <h4 id="Hùndùn">混沌</h4>
+          <button type="button" onclick="">混沌を隠す</button>
+          <button type="button" onclick="">混沌を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -249,6 +265,8 @@
         <!-- 琴朝（Qín Cháo） -->
         <section>
           <h4 id="Qín_Cháo">琴朝</h4>
+          <button type="button" onclick="">朝を隠す</button>
+          <button type="button" onclick="">朝を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -287,6 +305,8 @@
         <!-- 窮奇人殺丸（Qióngqí Jinsatsumaru） -->
         <section>
           <h4 id="Qióngqí_Jinsatsumaru">窮奇人殺丸</h4>
+          <button type="button" onclick="">人殺丸を隠す</button>
+          <button type="button" onclick="">人殺丸を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -324,6 +344,8 @@
         <!-- 饕餮食雲（Tāotiè Kukumo） -->
         <section>
           <h4 id="Tāotiè_Kukumo">饕餮食雲</h4>
+          <button type="button" onclick="">食雲を隠す</button>
+          <button type="button" onclick="">食雲を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -362,6 +384,8 @@
         <!-- 檮杌馬鹿模（Táowù Bakamo） -->
         <section>
           <h4 id="Táowù_Bakamo">檮杌馬鹿模</h4>
+          <button type="button" onclick="">馬鹿模を隠す</button>
+          <button type="button" onclick="">馬鹿模を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -399,6 +423,8 @@
         <!-- 學苗（Xuémiáo） -->
         <section>
           <h4 id="Xuémiáo">學苗</h4>
+          <button type="button" onclick="">學苗を隠す</button>
+          <button type="button" onclick="">學苗を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -437,9 +463,13 @@
       <!-- 趨郷町（Qūxiāng Town｜趨鄉鎮[趋乡镇]｜Qūxiāng Zhèn） -->
       <article>
         <h2 id="Qūxiāng_Town"><ruby>趨<rt class="head-furigana">すう</rt>郷<rt class="head-furigana">きょう</rt></ruby>町</h2>
+        <button type="button" onclick="">趨郷を隠す</button>
+        <button type="button" onclick="">趨郷を現す</button>
         <!-- 安抗仙（Ān Kàngxiān） -->
         <section>
           <h4 id="Ān_Kàngxiān">安抗仙</h4>
+          <button type="button" onclick="">抗仙を隠す</button>
+          <button type="button" onclick="">抗仙を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -477,6 +507,8 @@
         <!-- 水慧（Shuǐ Huì） -->
         <section>
           <h4 id="Shuǐ_Huì">水慧</h4>
+          <button type="button" onclick="">慧を隠す</button>
+          <button type="button" onclick="">慧を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -514,6 +546,8 @@
         <!-- 莊芳（Zhuāng Fāng） -->
         <section>
           <h4 id="Zhuāng_Fāng">莊芳</h4>
+          <button type="button" onclick="">芳を隠す</button>
+          <button type="button" onclick="">芳を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -552,9 +586,13 @@
       <!-- 匳咫囃村（Liánzhǐcà Village｜奩咫囃村[奁咫囃村]｜Liánzhǐcà Cūn） -->
       <article>
         <h2 id="Liánzhǐcà_Village"><ruby>匳<rt class="head-furigana">れん</rt>咫<rt class="head-furigana">し</rt>囃<rt class="head-furigana">そう</rt></ruby>村</h2>
+        <button type="button" onclick="">匳咫囃を隠す</button>
+        <button type="button" onclick="">匳咫囃を現す</button>
         <!-- 巴修影（Bā Xiūyǐng） -->
         <section>
           <h4 id="Bā_Xiūyǐng">巴修影</h4>
+          <button type="button" onclick="">修影を隠す</button>
+          <button type="button" onclick="">修影を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -592,6 +630,8 @@
         <!-- 紅桁（Hóng Héng） -->
         <section>
           <h4 id="Hóng_Héng">紅桁</h4>
+          <button type="button" onclick="">桁を隠す</button>
+          <button type="button" onclick="">桁を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -629,6 +669,8 @@
         <!-- 令狐柳仙（Lìnghú Liǔxiān） -->
         <section>
           <h4 id="Lìnghú_Liǔxiān">令狐柳仙</h4>
+          <button type="button" onclick="">柳仙を隠す</button>
+          <button type="button" onclick="">柳仙を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -666,6 +708,8 @@
         <!-- 齊姜（Qí Jiāng） -->
         <section>
           <h4 id="Qí_Jiāng">齊姜</h4>
+          <button type="button" onclick="">姜を隠す</button>
+          <button type="button" onclick="">姜を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -703,6 +747,8 @@
         <!-- 葉福恆（Yè Fúhéng） -->
         <section>
           <h4 id="Yè_Fúhéng">葉福恆</h4>
+          <button type="button" onclick="">福恆を隠す</button>
+          <button type="button" onclick="">福恆を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -740,6 +786,8 @@
         <!-- 鄒鳳苗（Zōu Fèngmiáo） -->
         <section>
           <h4 id="Zōu_Fèngmiáo">鄒鳳苗</h4>
+          <button type="button" onclick="">鳳苗を隠す</button>
+          <button type="button" onclick="">鳳苗を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -778,9 +826,13 @@
       <!-- 梦彝廳村（Mèngyítīng Village｜夢彝廳村[梦彝厅村]｜Mèngyítīng Cūn） -->
       <article>
         <h2 id="Mèngyítīng_Village"><ruby>梦<rt class="head-furigana">む</rt>彝<rt class="head-furigana">い</rt>廳<rt class="head-furigana">ちょう</rt></ruby>村</h2>
+        <button type="button" onclick="">梦彝廳を隠す</button>
+        <button type="button" onclick="">梦彝廳を現す</button>
         <!-- 金平春（Jīnpíng Chūn） -->
         <section>
           <h4 id="Jīnpíng_Chūn">金平春</h4>
+          <button type="button" onclick="">春を隠す</button>
+          <button type="button" onclick="">春を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -818,6 +870,8 @@
         <!-- 長孫學風（Zhǎngsūn Xuéfēng） -->
         <section>
           <h4 id="Zhǎngsūn_Xuéfēng">長孫學風</h4>
+          <button type="button" onclick="">學風を隠す</button>
+          <button type="button" onclick="">學風を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -856,9 +910,13 @@
       <!-- 繁榮の砦（Fort Fánróng｜繁榮堡壘[繁荣堡垒]｜Fánróng Bǎolěi） -->
       <article>
         <h2 id="Fort_Fánróng"><ruby>繁<rt class="head-furigana">はん</rt>榮<rt class="head-furigana">えい</rt></ruby>の砦</h2>
+        <button type="button" onclick="">繁榮の砦を隠す</button>
+        <button type="button" onclick="">繁榮の砦を現す</button>
         <!-- 林田龍（Lín Tiánlóng） -->
         <section>
           <h4 id="Lín_Tiánlóng">林田龍</h4>
+          <button type="button" onclick="">田龍を隠す</button>
+          <button type="button" onclick="">田龍を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -904,9 +962,13 @@
       <!-- 冰神の砦（Fort Bīngshén｜冰神堡壘[冰神堡垒]｜Bīngshén Bǎolěi） -->
       <article>
         <h2 id="Fort_Bīngshén"><ruby>冰<rt class="head-furigana">ひょう</rt>神<rt class="head-furigana">じん</rt></ruby>の砦</h2>
+        <button type="button" onclick="">冰神の砦を隠す</button>
+        <button type="button" onclick="">冰神の砦を現す</button>
         <!-- 壤駟虹珠（Rǎngsì Hóngzhū） -->
         <section>
           <h4 id="Rǎngsì_Hóngzhū">壤駟虹珠</h4>
+          <button type="button" onclick="">虹珠を隠す</button>
+          <button type="button" onclick="">虹珠を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -950,9 +1012,13 @@
       <!-- 齬鯰驗城（Yǔniányàn Castle｜齬鯰驗城堡[龉鲶验城堡]｜Yǔniányàn Chéngbǎo） -->
       <article>
         <h2 id="Yǔniányàn_Castle"><ruby>齬<rt class="head-furigana">ぎょ</rt>鯰<rt class="head-furigana">ねん</rt>驗<rt class="head-furigana">けん</rt></ruby>城</h2>
+        <button type="button" onclick="">齬鯰驗城を隠す</button>
+        <button type="button" onclick="">齬鯰驗城を現す</button>
         <!-- 上官羅陽（Shàngguān Luóyáng） -->
         <section>
           <h4 id="Shàngguān_Luóyáng">上官羅陽</h4>
+          <button type="button" onclick="">羅陽を隠す</button>
+          <button type="button" onclick="">羅陽を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1007,6 +1073,8 @@
         <!-- 孫小伊蘇（Sūn Koiso） -->
         <section>
           <h4 id="Sūn_Koiso">孫小伊蘇</h4>
+          <button type="button" onclick="">小伊蘇を隠す</button>
+          <button type="button" onclick="">小伊蘇を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1046,6 +1114,8 @@
         <!-- 孫呂齊（Sūn Lǚqí） -->
         <section>
           <h4 id="Sūn_Lǚqí">孫呂齊</h4>
+          <button type="button" onclick="">呂齊を隠す</button>
+          <button type="button" onclick="">呂齊を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1084,6 +1154,8 @@
         <!-- 孫來蝶（Sūn Raicho） -->
         <section>
           <h4 id="Sūn_Raicho">孫來蝶</h4>
+          <button type="button" onclick="">來蝶を隠す</button>
+          <button type="button" onclick="">來蝶を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1123,6 +1195,8 @@
         <!-- 孫薛剛（Sūn Xuēgāng） -->
         <section>
           <h4 id="Sūn_Xuēgāng">孫薛剛</h4>
+          <button type="button" onclick="">薛剛を隠す</button>
+          <button type="button" onclick="">薛剛を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：zhe/cold</p>
@@ -1171,6 +1245,8 @@
         <!-- 孫夕紀字乃（Sūn Yukijino） -->
         <section>
           <h4 id="Sūn_Yukijino">孫夕紀字乃</h4>
+          <button type="button" onclick="">夕紀字乃を隠す</button>
+          <button type="button" onclick="">夕紀字乃を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -1210,6 +1286,8 @@
         <!-- 熊之好（Xióng Zhīhǎo） -->
         <section>
           <h4 id="Xióng_Zhīhǎo">熊之好</h4>
+          <button type="button" onclick="">之好を隠す</button>
+          <button type="button" onclick="">之好を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
