--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -38,47 +38,71 @@
     </header>
     <main>
       <h1 id="Empire_of_the_Flame_Dragon">炎龍帝國</h1><hr>
+      <button type="button" onclick="">全てを隠す</button>
+      <button type="button" onclick="">全てを現す</button>
       <!-- 日（ニマ）の山｜Mt. Nyima｜ཉི་མ་གི་རི་｜nyi ma gi ri -->
       <div id="Peoples_of_Mt_Nyima">
         <h2 id="Mt_Nyima"><ruby>日<rt class="head-furigana">ニマ</rt></ruby>の山</h2>
+        <button type="button" onclick="">日の山を隠す</button>
+        <button type="button" onclick="">日の山を現す</button>
         <!-- ツェテンチャムクツァング町｜Tsetendramuktsang Town｜ཚེ་རྟེན་དྲ་མུངས་རྩངས་｜tshe rten dra mugs rtsangs -->
         <article>
           <h3 id="Tsetendramuktsang_Town">ツェテンチャムクツァング町</h3>
+          <button type="button" onclick="">ツェテンチャムクツァングを隠す</button>
+          <button type="button" onclick="">ツェテンチャムクツァングを現す</button>
         </article>
         <!-- チェーペル町｜Chöphel Town｜ཅོད་ཕེལ་｜cod phel -->
         <article>
           <h3 id="Chöphel_Town">チェーペル町</h3>
+          <button type="button" onclick="">チェーペルを隠す</button>
+          <button type="button" onclick="">チェーペルを現す</button>
         </article>
         <!-- ツァムチェー町｜Tsamchö Town｜ཙམས་ཆོན་｜tsams chod -->
         <article>
           <h3 id="Tsamchö_Town">ツァムチェー町</h3>
+          <button type="button" onclick="">ツァムチェーを隠す</button>
+          <button type="button" onclick="">ツァムチェーを現す</button>
         </article>
       </div>
       <!-- 月（タワ）の山｜Mt. Zlaba｜ཟླ་བ་གི་རི་｜zla ba gi ri -->
       <div id="Peoples_of_Mt_Zlaba">
         <h2 id="Mt_Zlaba"><ruby>月<rt class="head-furigana">タワ</rt></ruby>の山</h2>
+        <button type="button" onclick="">月の山を隠す</button>
+        <button type="button" onclick="">月の山を現す</button>
         <!-- ケームツァング町｜Geymutsang Town｜གེའི་མུ་ཚངས་｜ge'i mu tshangs -->
         <article>
           <h3 id="Geymutsang_Town">ケームツァング町</h3>
+          <button type="button" onclick="">ケームツァングを隠す</button>
+          <button type="button" onclick="">ケームツァングを現す</button>
         </article>
         <!-- ローツァワー町｜Lotsawa Town｜ལར་ཙ་བར་｜lor tsa bar -->
         <article>
           <h3 id="Lotsawa_Town">ローツァワー町</h3>
+          <button type="button" onclick="">ローツァワーを隠す</button>
+          <button type="button" onclick="">ローツァワーを現す</button>
         </article>
         <!-- バクトー町｜Bhakto Town｜བྷགས་ཏོར་｜bhags tor -->
         <article>
           <h3 id="Bhakto_Town">バクトー町</h3>
+          <button type="button" onclick="">バクトーを隠す</button>
+          <button type="button" onclick="">バクトーを現す</button>
         </article>
       </div>
       <!-- 閻魔の山｜Mt. Enma｜*་གི་རི་｜* gi ri -->
       <div id="Peoples_of_Mt_Enma">
         <h2 id="Mt_Enma">閻魔の山</h2>
+        <button type="button" onclick="">閻魔の山を隠す</button>
+        <button type="button" onclick="">閻魔の山を現す</button>
         <!-- ツァシラ市｜Tshasila City｜ཚ་སི་ལ་｜tsha si la -->
         <article>
           <h3 id="Tshasila_City">ツァシラ市</h3>
+          <button type="button" onclick="">ツァシラを隠す</button>
+          <button type="button" onclick="">ツァシラを現す</button>
           <!-- 閻魔塚沙々夢（Sasamu Enmazuka） -->
           <section>
             <h4 id="Sasamu_Enmazuka">沙々夢娘々</h4>
+            <button type="button" onclick="">沙々夢を隠す</button>
+            <button type="button" onclick="">沙々夢を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -119,6 +143,8 @@
           <!-- いけはたハミ（Hami Ikehata） -->
           <section>
             <h4 id="Hami_Ikehata">いけはたハミ</h4>
+            <button type="button" onclick="">ハミを隠す</button>
+            <button type="button" onclick="">ハミを現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -155,6 +181,8 @@
           <!-- ルンドゥプ・カリングポング・ルンドルプ・キドトドパ（Lhundup Kalingpong Lhundrup Kyidtodpa） -->
           <section>
             <h4 id="Lhundup_Kalingpong_Lhundrup_Kyidtodpa">ルンドゥプ・ルンドルプ</h4>
+            <button type="button" onclick="">ルンドゥプを隠す</button>
+            <button type="button" onclick="">ルンドゥプを現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -192,6 +220,8 @@
           <!-- 三ツ木姫娘（Himeko Mitsugi） -->
           <section>
             <h4 id="Himeko_Mitsugi">三ツ木姫娘</h4>
+            <button type="button" onclick="">姫娘を隠す</button>
+            <button type="button" onclick="">姫娘を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -228,6 +258,8 @@
           <!-- 築野居あや（Aya Tsunowi） -->
           <section>
             <h4 id="Aya_Tsunowi">築野居あや</h4>
+            <button type="button" onclick="">あやを隠す</button>
+            <button type="button" onclick="">あやを現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -265,9 +297,13 @@
         <!-- 凹途澤市｜Kubozusawa City｜ཀུ་བྷོ་ཟུ་ས་བ་｜ku bho zu sa ba -->
         <article>
           <h3 id="Kubozusawa_City">凹途澤市</h3>
+          <button type="button" onclick="">凹途澤を隠す</button>
+          <button type="button" onclick="">凹途澤を現す</button>
           <!-- 氷見英子（Hideko Himi） -->
           <section>
             <h4 id="Hideko_Himi">氷見英子</h4>
+            <button type="button" onclick="">英子を隠す</button>
+            <button type="button" onclick="">英子を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -304,6 +340,8 @@
           <!-- 烏ヶ原ころーねー（Korone Karasugahara） -->
           <section>
             <h4 id="Korone_Karasugahara">烏ヶ原ころーねー</h4>
+            <button type="button" onclick="">ころーねーを隠す</button>
+            <button type="button" onclick="">ころーねーを現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -341,6 +379,8 @@
           <!-- 蜘蛛沙羅禁如（Kinnyo Kumosara） -->
           <section>
             <h4 id="Kinnyo_Kumosara">蜘蛛沙羅禁如</h4>
+            <button type="button" onclick="">禁如を隠す</button>
+            <button type="button" onclick="">禁如を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -381,6 +421,8 @@
           <!-- 森涅壽美子（Sumiko Morine） -->
           <section>
             <h4 id="Sumiko_Morine">森涅壽美子</h4>
+            <button type="button" onclick="">壽美子を隠す</button>
+            <button type="button" onclick="">壽美子を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -417,6 +459,8 @@
           <!-- 兎仏嘉田宝鈴（Housuzu Ubukata） -->
           <section>
             <h4 id="Housuzu_Ubukata">兎仏嘉田宝鈴</h4>
+            <button type="button" onclick="">宝鈴を隠す</button>
+            <button type="button" onclick="">宝鈴を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -454,9 +498,13 @@
         <!-- 襤褸奈河町｜Horonagawa Town｜ཧོ་རོ་ན་ག་བ་｜ho ro na ga ba -->
         <article>
           <h3 id="Horonagawa_Town">襤褸奈河町</h3>
+          <button type="button" onclick="">襤褸奈河を隠す</button>
+          <button type="button" onclick="">襤褸奈河を現す</button>
           <!-- 久求十阿奈香（Anaka Hisakyuuto） -->
           <section>
             <h4 id="Anaka_Hisakyuuto">久求十阿奈香</h4>
+            <button type="button" onclick="">阿奈香を隠す</button>
+            <button type="button" onclick="">阿奈香を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -493,6 +541,8 @@
           <!-- 錐ヶ宮ルーメン乃（Lumenno Kirigamiya） -->
           <section>
             <h4 id="Lumenno_Kirigamiya">錐ヶ宮ルーメン乃</h4>
+            <button type="button" onclick="">ルーメン乃を隠す</button>
+            <button type="button" onclick="">ルーメン乃を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -535,6 +585,8 @@
           <!-- 又橋早千恵（Sachie Matahashi） -->
           <section>
             <h4 id="Sachie_Matahashi">又橋早千恵</h4>
+            <button type="button" onclick="">早千恵を隠す</button>
+            <button type="button" onclick="">早千恵を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -571,6 +623,8 @@
           <!-- ソウマ魎呼（Ryoko Soma） -->
           <section>
             <h4 id="Ryoko_Soma">ソウマ魎呼</h4>
+            <button type="button" onclick="">魎呼を隠す</button>
+            <button type="button" onclick="">魎呼を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -607,6 +661,8 @@
           <!-- 厄史丸純子（Junko Yakushimaru） -->
           <section>
             <h4 id="Junko_Yakushimaru">厄史丸純子</h4>
+            <button type="button" onclick="">純子を隠す</button>
+            <button type="button" onclick="">純子を現す</button>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -645,89 +701,133 @@
       <!-- 火（メ）の山｜Mt. Me｜མེ་གི་རི་｜me gi ri -->
       <div id="Peoples_of_Mt_Me">
         <h2 id="Mt_Me"><ruby>火<rt class="head-furigana">メ</rt></ruby>の山</h2>
+        <button type="button" onclick="">火の山を隠す</button>
+        <button type="button" onclick="">火の山を現す</button>
         <!-- チョクセイカーポ町｜Chokzaykarpo Town｜དཔྱོག་ཟའི་ཀར་པོ་｜dpyog za'i kar po -->
         <article>
           <h3 id="Chokzaykarpo_Town">チョクセイカーポ町</h3>
+          <button type="button" onclick="">チョクセイカーポを隠す</button>
+          <button type="button" onclick="">チョクセイカーポを現す</button>
         </article>
         <!-- ユングチュングトーチェ町｜Yungdrungdorje Town｜གཡུང་དྲུངས་རྡོ་རྗེ་｜g.yung drungs rdo rje -->
         <article>
           <h3 id="Yungdrungdorje_Town">ユングチュングトーチェ町</h3>
+          <button type="button" onclick="">ユングチュングトーチェを隠す</button>
+          <button type="button" onclick="">ユングチュングトーチェを現す</button>
         </article>
         <!-- ヨーチェー町｜Youdron Town｜ཡོའུ་དྲོན་｜yo'u dron -->
         <article>
           <h3 id="Youdron_Town">ヨーチェー町</h3>
+          <button type="button" onclick="">ヨーチェーを隠す</button>
+          <button type="button" onclick="">ヨーチェーを現す</button>
         </article>
       </div>
       <!-- 水（チュ）の山｜Mt. Chu｜ཆུ་གི་རི་｜chu gi ri -->
       <div id="Peoples_of_Mt_Chu">
         <h2 id="Mt_Chu"><ruby>水<rt class="head-furigana">チュ</rt></ruby>の山</h2>
+        <button type="button" onclick="">水の山を隠す</button>
+        <button type="button" onclick="">水の山を現す</button>
         <!-- タテュ町｜Dhadul Town｜འད་དུལ་｜'da dul -->
         <article>
           <h3 id="Dhadul_Town">タテュ町</h3>
+          <button type="button" onclick="">タテュを隠す</button>
+          <button type="button" onclick="">タテュを現す</button>
         </article>
         <!-- ピュンツォク・シメ町｜Phuntsok Jigme Town｜ཕུན་ཙོགས་འཇིགས་མེད་｜phun tsogs 'jigs med -->
         <article>
           <h3 id="Phuntsok_Jigme_Town">ピュンツォク・シメ町</h3>
+          <button type="button" onclick="">ピュンツォク・シメを隠す</button>
+          <button type="button" onclick="">ピュンツォク・シメを現す</button>
         </article>
         <!-- ポングパツァング町｜Bongpatsang Town｜བོང་པ་ཚངས་｜bong pa tshangs -->
         <article>
           <h3 id="Bongpatsang_Town">ポングパツァング町</h3>
+          <button type="button" onclick="">ポングパツァングを隠す</button>
+          <button type="button" onclick="">ポングパツァングを現す</button>
         </article>
       </div>
       <!-- 木（シング）の山｜Mt. Shing｜ཤིང་གི་རི་｜shing gi ri -->
       <div id="Peoples_of_Mt_Shing">
         <h2 id="Mt_Shing"><ruby>木<rt class="head-furigana">シング</rt></ruby>の山</h2>
+        <button type="button" onclick="">木の山を隠す</button>
+        <button type="button" onclick="">木の山を現す</button>
         <!-- シェンラ・ウェーカー・タナクツァング町｜Shenlha Wökar Dhanacktsang Town｜ཤེན་ལྷ་དབོད་ཀར་དྭ་བརྣགས་བརྫངས་｜shen lha dbod kar dwa brnags brdzangs -->
         <article>
           <h3 id="Shenlha_Wökar_Dhanacktsang_Town">シェンラ・ウェーカー・タナクツァング町</h3>
+          <button type="button" onclick="">シェンラ・ウェーカー・タナクツァングを隠す</button>
+          <button type="button" onclick="">シェンラ・ウェーカー・タナクツァングを現す</button>
         </article>
         <!-- ウェーナング町｜Wönang Town｜དབོལ་ནངས་｜dbol nangs -->
         <article>
           <h3 id="Wönang_Town">ウェーナング町</h3>
+          <button type="button" onclick="">ウェーナングを隠す</button>
+          <button type="button" onclick="">ウェーナングを現す</button>
         </article>
         <!-- サムテン・パクシ町｜Samten Pakshi Town｜སམ་བསྟན་པག་ཤིས་｜sam bstan pag shis -->
         <article>
           <h3 id="Samten_Pakshi_Town">サムテン・パクシ町</h3>
+          <button type="button" onclick="">サムテン・パクシを隠す</button>
+          <button type="button" onclick="">サムテン・パクシを現す</button>
         </article>
       </div>
       <!-- 金（チャジ）の山｜Mt. Lcagsrigs｜ལྕགས་རིགས་གི་རི་｜lcags rigs gi ri -->
       <div id="Peoples_of_Mt_Lcagsrigs">
         <h2 id="Mt_Lcagsrigs"><ruby>金<rt class="head-furigana">チャジ</rt></ruby>の山</h2>
+        <button type="button" onclick="">金の山を隠す</button>
+        <button type="button" onclick="">金の山を現す</button>
         <!-- ナムデー町｜Namdol Town｜ནམ་དོལ་｜nam dol -->
         <article>
           <h3 id="Namdol_Town">ナムデー町</h3>
+          <button type="button" onclick="">ナムデーを隠す</button>
+          <button type="button" onclick="">ナムデーを現す</button>
         </article>
         <!-- ペーモ町｜Palmo Town｜པལ་མོ་｜pal mo -->
         <article>
           <h3 id="Palmo_Town">ペーモ町</h3>
+          <button type="button" onclick="">ペーモを隠す</button>
+          <button type="button" onclick="">ペーモを現す</button>
         </article>
         <!-- タワ町｜Dawa Town｜ཟླ་བ་｜zla ba -->
         <article>
           <h3 id="Dawa_Town">タワ町</h3>
+          <button type="button" onclick="">タワを隠す</button>
+          <button type="button" onclick="">タワを現す</button>
         </article>
       </div>
       <!-- 土（サ）の山｜Mt. Sa｜ས་གི་རི་｜sa gi ri -->
       <div id="Peoples_of_Mt_Sa">
         <h2 id="Mt_Sa"><ruby>土<rt class="head-furigana">サ</rt></ruby>の山</h2>
+        <button type="button" onclick="">土の山を隠す</button>
+        <button type="button" onclick="">土の山を現す</button>
         <!-- チョチェー・チュングネー町｜Chodron Jungney Town｜གཅོ་དྲོན་ཇུང་ནེའི་｜gco dron jung ne'i -->
         <article>
           <h3 id="Chodron_Jungney_Town">チョチェー・チュングネー町</h3>
+          <button type="button" onclick="">チョチェー・チュングネーを隠す</button>
+          <button type="button" onclick="">チョチェー・チュングネーを現す</button>
         </article>
         <!-- ジクサング・チェーペル町｜Rigsang Chöphel Town｜རིགས་སངས་འཆོལ་འཕེལ་｜rigs sangs 'chol 'phel -->
         <article>
           <h3 id="Rigsang_Chöphel_Town">ジクサング・チェーペル町</h3>
+          <button type="button" onclick="">ジクサング・チェーペルを隠す</button>
+          <button type="button" onclick="">ジクサング・チェーペルを現す</button>
         </article>
         <!-- ンゴンガ町｜Ngonga Town｜རྔོ་ང་｜rngo nga -->
         <article>
           <h3 id="Ngonga_Town">ンゴンガ町</h3>
+          <button type="button" onclick="">ンゴンガを隠す</button>
+          <button type="button" onclick="">ンゴンガを現す</button>
         </article>
       </div>
       <!-- 山の四天王（Big Four of the Mountain） -->
       <article>
         <h2 id="Big_Four_of_the_Mountain">山の四天王</h2>
+        <button type="button" onclick="">四天王を隠す</button>
+        <button type="button" onclick="">四天王を現す</button>
         <!-- 理姫丸一姫（Kazuhime Rikimaru） -->
         <section>
           <h4 id="Kazuhime_Rikimaru">理姫丸一姫</h4>
+          <button type="button" onclick="">一姫を隠す</button>
+          <button type="button" onclick="">一姫を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -765,6 +865,8 @@
         <!-- 毘沙門天（Lord Bishamonten） -->
         <section>
           <h4 id="Bishamonten">毘沙門天</h4>
+          <button type="button" onclick="">毘沙門天を隠す</button>
+          <button type="button" onclick="">毘沙門天を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -801,6 +903,8 @@
         <!-- 大野二姫（Jihime Ono） -->
         <section>
           <h4 id="Jihime_Ono">大野二姫</h4>
+          <button type="button" onclick="">二姫を隠す</button>
+          <button type="button" onclick="">二姫を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -838,6 +942,8 @@
         <!-- 増長天（Lord Zouchouten） -->
         <section>
           <h4 id="Zouchouten">増長天</h4>
+          <button type="button" onclick="">増長天を隠す</button>
+          <button type="button" onclick="">増長天を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -874,6 +980,8 @@
         <!-- 雪村三姫（Miki Yukimaru） -->
         <section>
           <h4 id="Miki_Yukimaru">雪村三姫</h4>
+          <button type="button" onclick="">三姫を隠す</button>
+          <button type="button" onclick="">三姫を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -911,6 +1019,8 @@
         <!-- 持国天（Lord Jikokuten） -->
         <section>
           <h4 id="Jikokuten">持国天</h4>
+          <button type="button" onclick="">持国天を隠す</button>
+          <button type="button" onclick="">持国天を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -947,6 +1057,8 @@
         <!-- 古澤四姫（Shiki Furusawa） -->
         <section>
           <h4 id="Shiki_Furusawa">古澤四姫</h4>
+          <button type="button" onclick="">四姫を隠す</button>
+          <button type="button" onclick="">四姫を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
@@ -984,6 +1096,8 @@
         <!-- 広目天（Lord Koumokuten） -->
         <section>
           <h4 id="Koumokuten">広目天</h4>
+          <button type="button" onclick="">広目天を隠す</button>
+          <button type="button" onclick="">広目天を現す</button>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
