--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -39,6 +39,8 @@
     <main>
       <article>
         <h1 id="Ibarasaki_City">茨崎市</h1><hr>
+        <button type="button" onclick="">全てを隠す</button>
+        <button type="button" onclick="">全てを現す</button>
         <!-- イラダ・アッバスグルギル（İradə Abbasqulugil） -->
         <section>
           <h4 id="İradə_Abbasqulugil">イラダ・アッバスグルギル</h4>
