Imported /js/bizyutukan.js

--- a/html/gallery/spalmea/Ingegärd_Skarsgård.html
+++ b/html/gallery/spalmea/Ingegärd_Skarsgård.html
@@ -27,6 +27,8 @@
     <title>美術館　インゲゲルド・スカースゴールド</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <!-- Scripts -->
+    <script src="../../../js/bizyutukan.js"></script>
   </head>
   <body>
     <header>
