--- a/html/gallery/nizi/Ilyinishna_Makarovna_Obraztsova-Sluchevskaya.html
+++ b/html/gallery/nizi/Ilyinishna_Makarovna_Obraztsova-Sluchevskaya.html
@@ -27,6 +27,8 @@
     <title>美術館　イリニシュナ・マカロフナ・オブラズツォファ</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <!-- Scripts -->
+    <script src="../../../js/bizyutukan.js"></script>
   </head>
   <body>
     <header>
