--- a/html/gallery/nizi/Kishihime_Nuwesaka.html
+++ b/html/gallery/nizi/Kishihime_Nuwesaka.html
@@ -27,6 +27,8 @@
     <title>美術館　ぬゑさか岸姫</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <!-- Scripts -->
+    <script src="../../../js/bizyutukan.js"></script>
   </head>
   <body>
     <header>
