--- a/html/gallery/spalmea/Linnéa_Sörenstram.html
+++ b/html/gallery/spalmea/Linnéa_Sörenstram.html
@@ -27,6 +27,8 @@
     <title>美術館　リンネェア・ソレンストラム</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <!-- Scripts -->
+    <script src="../../../js/bizyutukan.js"></script>
   </head>
   <body>
     <header>
