Added buttons for hiding and showing NSFW art.

--- a/html/gallery/nizi/Kishihime_Nuwesaka.html
+++ b/html/gallery/nizi/Kishihime_Nuwesaka.html
@@ -53,6 +53,8 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
+        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
+        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="ぬゑさか岸姫（スク水）">
             <img class="gallery-art" src="../../../img/gallery/Kishihime_Nuwesaka/ぬゑさか岸姫（スク水）.png" alt="ぬゑさか岸姫（スク水）">
