--- a/html/gallery/spalmea/Hanna_Cederström.html
+++ b/html/gallery/spalmea/Hanna_Cederström.html
@@ -53,6 +53,8 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
+        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
+        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
         </div>
       </section>
