Numbered <div> with id "nsfw" (nsfw0, nsfw1, ..)

--- a/html/gallery/nizi/Satoki_Nijikawa.html
+++ b/html/gallery/nizi/Satoki_Nijikawa.html
@@ -72,7 +72,7 @@
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Satoki Sprite.png" alt="郷鬼のスプライト">
             <p class="caption">郷鬼のスプライト</p>
           </div>
-          <div id="nsfw">
+          <div id="nsfw0">
             <div class="art-gallery" id="郷鬼のスプライト・ブラジャーとオムツ">
               <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ">
               <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
@@ -96,7 +96,7 @@
             <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/Pride 2024.png" alt="プライド・２０２４年">
             <p class="caption">プライド・２０２４年</p>
           </div>
-          <div id="nsfw">
+          <div id="nsfw1">
             <div class="art-gallery" id="A Smol Oni ｷﾓﾁｲｲ">
               <img class="gallery-art" src="../../../img/gallery/Satoki_Nijikawa/A Smol Oni ｷﾓﾁｲｲ.png" alt="A Smol Oni ｷﾓﾁｲｲ">
               <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
