Imported stylesheet "bizyutukan.css"

--- a/html/gallery/spalmea/Mirabella_Lennartsson.html
+++ b/html/gallery/spalmea/Mirabella_Lennartsson.html
@@ -27,6 +27,7 @@
     <title>美術館　ミラベラ・レンナートッソン</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <link rel="stylesheet" href="../../../css/bizyutukan.css">
     <!-- Scripts -->
     <script src="../../../js/bizyutukan.js"></script>
   </head>
