--- a/html/gallery/nizi/Hap_P._Emo-shun.html
+++ b/html/gallery/nizi/Hap_P._Emo-shun.html
@@ -27,6 +27,7 @@
     <title>美術館　ハップ・Ｐ・エモ＝ション</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../../../css/default.css">
+    <link rel="stylesheet" href="../../../css/bizyutukan.css">
     <!-- Scripts -->
     <script src="../../../js/bizyutukan.js"></script>
   </head>
