Fixed colour styling

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -608,7 +608,7 @@
                 誕生日：<br>
                 年齢：
               </p>
-              <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
+              <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="background-color: #FBD569; color: #404040;">金色</span>である。</p>
               <br>
               <a href="./gallery/nizi/Hap_P._Emo-shun.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
               <br>
