Updated scripts comment in <head> to match other html files in project

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -28,7 +28,7 @@
     <!-- The CSS stylesheets -->
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/nizi.css">
-    <!-- The JavaScript scripts -->
+    <!-- Scripts -->
     <script src="../js/nizi.js"></script>
   </head>
   <body>
