Imported JavaScript file

--- a/html/battle_item.html
+++ b/html/battle_item.html
@@ -27,6 +27,8 @@
     <title>造化神録　戦闘のアイテム</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/battle_item.js"></script>
   </head>
   <body>
     <header>
