--- a/html/claeq-swary.html
+++ b/html/claeq-swary.html
@@ -27,6 +27,8 @@
     <title>造化神録　クレーク＝スワリーのカウンシル・エリア</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/claeq-swary.js"></script>
   </head>
   <body>
     <header>
