--- a/html/creation.html
+++ b/html/creation.html
@@ -27,6 +27,8 @@
     <title>造化神録　創造する神々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/creation.js"></script>
   </head>
   <body>
     <header>
