--- a/html/extra_kyara.html
+++ b/html/extra_kyara.html
@@ -27,6 +27,8 @@
     <title>造化神録　エキストラ　詰らない人々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/extra_kyara.js"></script>
   </head>
   <body>
     <header>
