--- a/html/gengo.html
+++ b/html/gengo.html
@@ -27,6 +27,8 @@
     <title>造化神録　多い言語</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/gengo.js"></script>
   </head>
   <body>
     <header>
