--- a/html/hourai.html
+++ b/html/hourai.html
@@ -27,6 +27,8 @@
     <title>造化神録　蓬莱山の八仙様達</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/hourai.js"></script>
   </head>
   <body>
     <header>
