--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -27,6 +27,8 @@
     <title>造化神録　キャブロイシュタイン王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/kableustein.js"></script>
   </head>
   <body>
     <header>
