--- a/html/mitutou_note.html
+++ b/html/mitutou_note.html
@@ -27,6 +27,8 @@
     <title>造化神録　光藤の手記</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/mitutou_note.js"></script>
   </head>
   <body>
     <header>
