--- a/html/music.html
+++ b/html/music.html
@@ -27,6 +27,8 @@
     <title>造化神録　エキストラ　音楽室</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/extra_music.js"></script>
   </head>
   <body>
     <header>
