--- a/html/pride.html
+++ b/html/pride.html
@@ -48,6 +48,8 @@
           padding: 8px;
       }
     </style>
+    <!-- Scripts -->
+    <script src="../js/pride.js"></script>
   </head>
   <body>
     <header>
