--- a/html/ragriysya.html
+++ b/html/ragriysya.html
@@ -27,6 +27,8 @@
     <title>造化神録　ラグリーシヤ州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/ragriysya.js"></script>
   </head>
   <body>
     <header>
