--- a/html/shimshi.html
+++ b/html/shimshi.html
@@ -27,6 +27,8 @@
     <title>造化神録　軌道都市シムシ</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/shimshi.js"></script>
   </head>
   <body>
     <header>
