--- a/html/skeyj_klijan.html
+++ b/html/skeyj_klijan.html
@@ -27,6 +27,8 @@
     <title>造化神録　スケイ・クリヤン選挙区</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/skeyj_klijan.js"></script>
   </head>
   <body>
     <header>
