--- a/html/species.html
+++ b/html/species.html
@@ -27,6 +27,8 @@
     <title>造化神録　種族</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/species.js"></script>
   </head>
   <body>
     <header>
