--- a/html/stried_prar.html
+++ b/html/stried_prar.html
@@ -27,6 +27,8 @@
     <title>造化神録　ストリエドプラル州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/stried_prar.js"></script>
   </head>
   <body>
     <header>
