--- a/html/tengoku.html
+++ b/html/tengoku.html
@@ -27,6 +27,8 @@
     <title>造化神録　天王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/tengoku.js"></script>
   </head>
   <body>
     <header>
