--- a/html/terms.html
+++ b/html/terms.html
@@ -27,6 +27,8 @@
     <title>造化神録　用語辞典</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/terms.js"></script>
   </head>
   <body>
     <header>
