--- a/html/unknown.html
+++ b/html/unknown.html
@@ -27,6 +27,8 @@
     <title>造化神録　人であるの？</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/unknown.js"></script>
   </head>
   <body>
     <header>
