--- a/html/ahia.html
+++ b/html/ahia.html
@@ -27,6 +27,8 @@
     <title>造化神録　アーヒア道</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/ahia.js"></script>
   </head>
   <body>
     <header>
