--- a/html/armor.html
+++ b/html/armor.html
@@ -27,6 +27,8 @@
     <title>造化神録　装甲</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/armor.js"></script>
   </head>
   <body>
     <header>
