--- a/html/astrax.html
+++ b/html/astrax.html
@@ -27,6 +27,8 @@
     <title>造化神録　アスドラグ王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/astrax.js"></script>
   </head>
   <body>
     <header>
