--- a/html/boss.html
+++ b/html/boss.html
@@ -27,6 +27,8 @@
     <title>造化神録　ボスの書</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/boss.js"></script>
   </head>
   <body>
     <header>
