--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -27,6 +27,8 @@
     <title>造化神録　侮之殿</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/bunoden.js"></script>
   </head>
   <body>
     <header>
