--- a/html/enu.html
+++ b/html/enu.html
@@ -27,6 +27,8 @@
     <title>造化神録　エヌ</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/enu.js"></script>
   </head>
   <body>
     <header>
