--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -27,6 +27,8 @@
     <title>造化神録　炎龍帝國</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/flame_dragon.js"></script>
   </head>
   <body>
     <header>
