--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -27,6 +27,8 @@
     <title>造化神録　日木ヶ原の森</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/hikigahara.js"></script>
   </head>
   <body>
     <header>
