--- a/html/hutagozima.html
+++ b/html/hutagozima.html
@@ -27,6 +27,8 @@
     <title>造化神録　二子島連合共和国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/hutagozima.js"></script>
   </head>
   <body>
     <header>
