--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -27,6 +27,8 @@
     <title>造化神録　茨崎市</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/ibarasaki.js"></script>
   </head>
   <body>
     <header>
