--- a/html/maegaki.html
+++ b/html/maegaki.html
@@ -27,6 +27,8 @@
     <title>造化神録　前書き</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/maegaki.js"></script>
   </head>
   <body>
     <header>
