--- a/html/menu.html
+++ b/html/menu.html
@@ -27,6 +27,8 @@
     <title>造化神録　目次メニュー</title>
     <!-- The CSS stylesheet(s) -->
     <link rel="stylesheet" href="../css/menu.css">
+    <!-- Scripts -->
+    <script src="../js/menu.js"></script>
   </head>
   <body>
     <header>
