--- a/html/monster.html
+++ b/html/monster.html
@@ -27,6 +27,8 @@
     <title>造化神録　妖獣の書</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/monster.js"></script>
   </head>
   <body>
     <header>
