--- a/html/mozi.html
+++ b/html/mozi.html
@@ -27,6 +27,8 @@
     <title>造化神録　多い文字</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/mozi.js"></script>
   </head>
   <body>
     <header>
