--- a/html/navy.html
+++ b/html/navy.html
@@ -27,6 +27,8 @@
     <title>造化神録　宇志江王立海軍</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/navy.js"></script>
   </head>
   <body>
     <header>
