--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -27,6 +27,8 @@
     <title>造化神録　黒曜石評議会と加入者</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/obsidianrat.js"></script>
   </head>
   <body>
     <header>
