--- a/html/ochea.html
+++ b/html/ochea.html
@@ -27,6 +27,8 @@
     <title>造化神録　オチェア州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/ochea.js"></script>
   </head>
   <body>
     <header>
