--- a/html/others.html
+++ b/html/others.html
@@ -27,6 +27,8 @@
     <title>造化神録　他の人々</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/others.js"></script>
   </head>
   <body>
     <header>
