--- a/html/place.html
+++ b/html/place.html
@@ -27,6 +27,8 @@
     <title>造化神録　場所</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/place.js"></script>
   </head>
   <body>
     <header>
