--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -27,6 +27,8 @@
     <title>造化神録　スポルメーア民主共和国</title>
     <!-- The CSS stylesheet(s) -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/spalmea.js"></script>
   </head>
   <body>
     <header>
