--- a/html/spirit.html
+++ b/html/spirit.html
@@ -27,6 +27,8 @@
     <title>造化神録　スピリットカード</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/spirit.js"></script>
   </head>
   <body>
     <header>
