--- a/html/top.html
+++ b/html/top.html
@@ -27,6 +27,8 @@
     <title>造化神録　概要</title>
     <!-- The CSS stylesheet(s) -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/top.js"></script>
   </head>
   <body>
     <header>
