--- a/html/zastil.html
+++ b/html/zastil.html
@@ -27,6 +27,8 @@
     <title>造化神録　ツァスティル州</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <!-- Scripts -->
+    <script src="../js/zastil.js"></script>
   </head>
   <body>
     <header>
