Added buttons for hiding and revealing all

--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -40,8 +40,8 @@
     </header>
     <main>
       <h1 id="Bīngyán_Kingdom">冰岩王國</h1><hr>
-      <button type="button" onclick="">全てを隠す</button>
-      <button type="button" onclick="">全てを現す</button>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 渮禳村（Héráng Village｜菏禳村[菏禳村]｜Héráng Cūn） -->
       <article>
         <h2 id="Héráng_Village"><ruby>渮<rt class="head-furigana">か</rt>禳<rt class="head-furigana">じょう</rt></ruby>村</h2>
