--- a/html/boss.html
+++ b/html/boss.html
@@ -40,8 +40,8 @@
     </header>
     <main>
       <h1 id="Boss_Compendium">ボスの書</h1><hr>
-      <button type="button" onclick="">全てを隠す</button>
-      <button type="button" onclick="">全てを現す</button>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <article>
         <h2 id="Chapter_One">第一章　異常</h2>
         <button type="button" onclick="">第一章を隠す</button>
