--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -41,8 +41,8 @@
     <main>
       <article>
         <h1 id="Palace_of_the_Despised">侮之殿</h1><hr>
-        <button type="button" onclick="">全てを隠す</button>
-        <button type="button" onclick="">全てを現す</button>
+        <button type="button" onclick="hideAll()">全てを隠す</button>
+        <button type="button" onclick="revealAll()">全てを現す</button>
         <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
         <section>
           <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
