--- a/html/credit.html
+++ b/html/credit.html
@@ -40,6 +40,8 @@
     </header>
     <main class="credits">
       <h1 id="Staff_Credits">スタッフクレジッツ</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 原作｜Original Story -->
       <section>
         <h4 class="credits-head">原作</h4>
