--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -40,8 +40,8 @@
     </header>
     <main>
       <h1 id="Empire_of_the_Flame_Dragon">炎龍帝國</h1><hr>
-      <button type="button" onclick="">全てを隠す</button>
-      <button type="button" onclick="">全てを現す</button>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 日（ニマ）の山｜Mt. Nyima｜ཉི་མ་གི་རི་｜nyi ma gi ri -->
       <div id="Peoples_of_Mt_Nyima">
         <h2 id="Mt_Nyima"><ruby>日<rt class="head-furigana">ニマ</rt></ruby>の山</h2>
