--- a/html/hutagozima.html
+++ b/html/hutagozima.html
@@ -38,8 +38,8 @@
     </header>
     <main>
       <h1 id="United_Republic_of_the_Twin_Islands">二子島連合共和国</h1><hr>
-      <button type="button" onclick="">全てを隠す</button>
-      <button type="button" onclick="">全てを現す</button>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- ディドフッフシ・チャギシー市（Dhidhhuffushi-Chaghisi City）-->
       <article>
         <h2 id="Dhidhhuffushi-Chaghisi_City">ディドフッフシ・チャギシー市</h2>
