--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -41,8 +41,8 @@
     <main>
       <article>
         <h1 id="Ibarasaki_City">茨崎市</h1><hr>
-        <button type="button" onclick="">全てを隠す</button>
-        <button type="button" onclick="">全てを現す</button>
+        <button type="button" onclick="hideAll()">全てを隠す</button>
+        <button type="button" onclick="revealAll()">全てを現す</button>
         <!-- イラダ・アッバスグルギル（İradə Abbasqulugil） -->
         <section>
           <h4 id="İradə_Abbasqulugil">イラダ・アッバスグルギル</h4>
