--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <h1 id="Kingdom_of_Kableustein">キャブロイシュタイン王国</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- キャブロイシュタイン町（Kableustein Town｜Kableustein Städtchen） -->
       <article>
         <h2 id="Kableustein_Town">キャブロイシュタイン町</h2>
