--- a/html/monster.html
+++ b/html/monster.html
@@ -41,6 +41,8 @@
     <main>
       <article>
         <h1 id="Compendium_of_Beasts">妖獣の書</h1><hr>
+        <button type="button" onclick="hideAll()">全てを隠す</button>
+        <button type="button" onclick="revealAll()">全てを現す</button>
         <!-- コウモリ（Bat） -->
         <section>
           <h4 id="Bat">コウモリ</h4>
