--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <h1 id="Obsidian_Council_and_their_Affiliates">黒曜石評議会と加入者</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- ライラック・ブラザーウィック（Lilac Blatherwick） -->
       <section>
         <h4 id="Lilac_Blatherwick">ライラック・ブラザーウィック</h4>
@@ -376,20 +378,20 @@
         <p>嫌な思いが飛び交うと、朝次郎は昼寝をする由佳理をゆっくり脱いた。</p>
         <p>――彼が犯罪で追放されてから３年後、朝次郎と伊紀は森の中を歩いた。</p>
         <p>
-          　「小児性愛者と一緒にグループ化する必要があるのはなぜの？」<br>
-          　「小児性愛者じゃないよぞ！」
+          「小児性愛者と一緒にグループ化する必要があるのはなぜの？」<br>
+          「小児性愛者じゃないよぞ！」
         </p>
         <p>朝次郎の犯罪には正当化の余地はないのね。</p>
         <p>
-          　「最初の沖美姫様、次の由佳理。キモい人」<br>
-          　「し、失礼します」
+          「最初の沖美姫様、次の由佳理。キモい人」<br>
+          「し、失礼します」
         </p>
         <p>若い少女（３歳）が伊紀と朝次郎に歩み上がった。</p>
         <p>　「彼から逃げるよ。子供にひどいことをするでしょう」</p>
         <p>朝次郎は伊紀に睨んだ。</p>
         <p>
-          　「工藤は中傷に頼る最後の人だ」<br>
-          　「バカ朝次郎。それが本当なら中傷では無い。朝次郎、ペドファイルよ」
+          「工藤は中傷に頼る最後の人だ」<br>
+          「バカ朝次郎。それが本当なら中傷では無い。朝次郎、ペドファイルよ」
         </p>
       </section>
       <!-- ラインハルト・シッケンダンツ（Reinhard Schickendantz） -->
