--- a/html/place.html
+++ b/html/place.html
@@ -40,6 +40,8 @@
     </header>
     <article>
       <h1 id="Locations">場所</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <p class="coming-soon">乞うご期待！！</p>
     </article>
     <footer>
