--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -41,6 +41,8 @@
     <main>
       <article>
         <h1 id="Rabbit_Village">ウサギの里</h1><hr>
+        <button type="button" onclick="hideAll()">全てを隠す</button>
+        <button type="button" onclick="revealAll()">全てを現す</button>
         <!-- アラ（Ala｜عَلْآع｜ʿAlʾāʿ） -->
         <section>
           <h4 id="Ala">アラ</h4>
