--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <h1 id="Spålméa_Democratic_Republic">スポルメーア民主共和国</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- スコッゲド村（Skoggärd Village） -->
       <article>
         <h2 id="Skoggärd_Village">スコッゲド村</h2>
