--- a/html/ushie.html
+++ b/html/ushie.html
@@ -38,6 +38,8 @@
     </header>
     <main>
       <h1 id="Kingdom_of_Ushie">宇志江王国</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 宇志江町（Ushie Town） -->
       <article>
         <h2 id="Ushie_Town">宇志江町</h2>
@@ -450,9 +452,9 @@
           <p>魔界の美しいケット・シー</p>
           <p>
             愛称：干寺　幽美故（ほしでら　ゆみこ）<br>
-            　　　Hoshidera Yumiko<br>
+            Hoshidera Yumiko<br>
             本名：シーリェス・フォーレシュ<br>
-            　　　<span lang="gd">Síleas Fólais</span>
+            <span lang="gd">Síleas Fólais</span>
           </p>
           <p>
             種族：<ruby>魔界の猫<rt>ケット・シー</rt></ruby><br>
@@ -2477,7 +2479,7 @@
           <p>
             種族：人工的な鬼<br>
             能力：甘い夢を呼び起こす程度の能力<br>
-            　　　悪夢を払拭する程度の能力<br>
+            悪夢を払拭する程度の能力<br>
             武器：刀”甘夢愛剣”、脇差”悪夢恨剣”
           </p>
           <p>
@@ -2492,16 +2494,16 @@
           </p>
           <p>
             家族：笹川あっ子（母親）<br>
-            　　　笹川祐二（父親）<br>
-            　　　西園寺キット（代親）<br>
-            　　　犬上藤（祖母）<br>
-            　　　笹川伊狸沙（祖母）<br>
-            　　　犬上茂和（祖父）<br>
-            　　　犬上波知之（叔父）<br>
-            　　　犬上雲雀代（叔母）<br>
-            　　　犬上かをる（従妹）<br>
-            　　　恵墨・クラーラー・セーデシュトレーム（年下の同性）<br>
-            　　　茨城光秀（年下の同性）
+            笹川祐二（父親）<br>
+            西園寺キット（代親）<br>
+            犬上藤（祖母）<br>
+            笹川伊狸沙（祖母）<br>
+            犬上茂和（祖父）<br>
+            犬上波知之（叔父）<br>
+            犬上雲雀代（叔母）<br>
+            犬上かをる（従妹）<br>
+            恵墨・クラーラー・セーデシュトレーム（年下の同性）<br>
+            茨城光秀（年下の同性）
           </p>
           <p>祐二とあっ子の十二歳の娘で、宇志江の姫である。</p>
           <p>父親が求める多くのことで苦労しているが、彼についてはとても気にしている。</p>
@@ -2831,7 +2833,7 @@
           </p>
           <p>
             家族：田香羅さつき（母親）<br>
-            　　　田香羅由佳理（妹）
+            田香羅由佳理（妹）
           </p>
           <p>由佳理の姉である。</p>
           <p>皐戎傘は由佳理より３歳年上である。母親の田香羅さつきが出産で亡くなった為、そんな若い年齢で由佳理の世話をしなければならない。皐戎傘と由佳理は現在、笹川の王家によって保護されている。</p>
@@ -2892,7 +2894,7 @@
           </p>
           <p>
             家族：田香羅皐戎傘（子）<br>
-            　　　田香羅由佳理（娘）
+            田香羅由佳理（娘）
           </p>
           <p>皐戎傘と由佳理の死んだ母親である。出産中で死んだ。</p>
           <br>
@@ -2948,7 +2950,7 @@
           </p>
           <p>
             家族：田香羅さつき（母親）<br>
-            　　　田香羅皐戎傘（年上の同性）
+            田香羅皐戎傘（年上の同性）
           </p>
           <p>階級：陸士長</p>
           <p>皐戎傘の妹と宇志江の騎士である。陸士長と強い騎士だよ。</p>
