--- a/html/creation.html
+++ b/html/creation.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <h1 id="Creation_Gods">創造する神々</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
