--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -40,8 +40,8 @@
     </header>
     <main>
       <h1 id="Hikigahara_Forest">日木ヶ原の森</h1><hr>
-      <button type="button" onclick="">全てを隠す</button>
-      <button type="button" onclick="">全てを現す</button>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 朴茶々丸（Chachamaru Paku） -->
       <section>
         <h4 id="Chachamaru_Paku">朴茶々丸</h4>
