--- a/html/navy.html
+++ b/html/navy.html
@@ -40,6 +40,8 @@
     </header>
     <main>
       <h1 id="Ushie_Royal_Navy">宇志江王立海軍</h1><hr>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- 綿津見航空母艦船団（Watatsumi Carrier Division） -->
       <article>
         <h2 id="Watatsumi_Carrier_Division">綿津見航空母艦船団</h2>
