--- a/html/pride.html
+++ b/html/pride.html
@@ -59,6 +59,8 @@
       </h1>
     </header>
     <main>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <!-- Pride template / Pride flag placeholder :3 -->
       <section>
         <h1>プライド</h1><hr>
@@ -914,20 +916,20 @@
         <br>
       </section>
       <!-- NOTICE!!
-       This next section is for a sexuality that is contested and/or legitimately classified
-       as a mental disorder that would require treatment. ―Wamo, Niji System -->
+   This next section is for a sexuality that is contested and/or legitimately classified
+   as a mental disorder that would require treatment. ―Wamo, Niji System -->
       <!-- ハイパーセクシャル（Hypersexual） -->
       <!--<section>
-    <h1>ハイパーセクシャル</h1><hr>
-    <div class="pride-color">
-      <p>
-        <span style="">Placeholder text</span><br>
-        <span style="">:3</span>
-      </p>
-    </div>
-    <div class="pride-display">-->
+  <h1>ハイパーセクシャル</h1><hr>
+  <div class="pride-color">
+    <p>
+      <span style="">Placeholder text</span><br>
+      <span style="">:3</span>
+    </p>
+  </div>
+  <div class="pride-display">-->
       <!-- Wikipedia link is given below to give an overview as to the reasoning behind my
-       decision to leave this in here, but commented out. ―Wamo, Niji System -->
+   decision to leave this in here, but commented out. ―Wamo, Niji System -->
       <!--<a href="https://en.wikipedia.org/wiki/Hypersexuality" title="ハイパーセクシャル" target="_blank">
         <img class="pride-flag" src="../img/pride/contention/Hypersexual.png" alt="ハイパーセクシャル（Hypersexual）" title="ハイパーセクシャル（Hypersexual）">
       </a>
@@ -1095,10 +1097,10 @@
         <br>
       </section>
       <!-- NOTICE!!
-       I'm adding Otherkin/Therian because I honestly think that otherkin (such as
-       our system's host (Satoki, oni otherkin)) and therians (like many of our
-       friends) should be seen as people as well. That and this is also somewhat
-       just for fun. :3 ―Wamo, Niji System -->
+   I'm adding Otherkin/Therian because I honestly think that otherkin (such as
+   our system's host (Satoki, oni otherkin)) and therians (like many of our
+   friends) should be seen as people as well. That and this is also somewhat
+   just for fun. :3 ―Wamo, Niji System -->
       <!-- 獣人（Otherkin & Therian） -->
       <section>
         <h1>獣人</h1><hr>
