--- a/html/spirit.html
+++ b/html/spirit.html
@@ -39,6 +39,8 @@
       </h1>
     </header>
     <main>
+      <button type="button" onclick="hideAll()">全てを隠す</button>
+      <button type="button" onclick="revealAll()">全てを現す</button>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
